# sow-agent

./: .env.example  .gitignore  README.md  package-lock.json  requirements.txt  setup.py
.kiro/settings/: mcp.json
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Sidebar.tsx  (+2 more)
mcp_server/: __init__.py  bedrock_agent_server.py
sowsystem/: .bedrock_agentcore.yaml  project_adapter.py  push_to_github.py  pyproject.toml  runner.py  workspace_manager.py
sowsystem/src/: datadog_tools.py  main.py  tools.py
sowsystem/src/mcp_client/: datadog_client.py
sowsystem/src/model/: load.py
sowsystem/workspaces/20260220_143636/src/: config.json
sowsystem/workspaces/20260220_143740/snapshot/: main.py
sowsystem/workspaces/20260220_143740/sow/: sow_reference.md
sowsystem/workspaces/20260220_143740/src/: sow.md
sowsystem/workspaces/20260220_144055/: config.json
sowsystem/workspaces/20260220_144055/src/: README.md  aws_bedrock_agent.py  controller.py  reporting_tool.py  requirements.txt  security_headers_tool.py
sowsystem/workspaces/20260220_144055/src/agents/: aws_bedrock_agent.py  reporting_tool.py  security_headers_tool.py
sowsystem/workspaces/20260220_144055/src/config/: settings.py
sowsystem/workspaces/20260220_144055/src/controllers/: main_controller.py
sowsystem/workspaces/20260220_144055/src/tests/: test_agents.py  test_controllers.py  test_utils.py
sowsystem/workspaces/20260220_144055/src/utils/: file_utils.py
src/: __init__.py  agent_client.py
(+2 files in other folders)
